--- a/school.html
+++ b/school.html
@@ -56,6 +56,9 @@ Computing</h2>
 		(<i>4 hours</i> - Wed 1 Sep 13:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
+			<li>James Baxter</h3></li>
+			<li>Pedro De Oliveira Salazar Ribeiro</h3></li>
+			<li>Alvaro Miyazawa</h3></li>
 		</ul>
 		<hr>
 	</li>
@@ -123,7 +126,8 @@ Computing</h2>
                   </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>13:00-17:00 - Software Engineering for Robotics: RoboStar technology</strong>
+                      <p class="text"><strong>13:00-17:00 - Software Engineering for Robotics: RoboStar technology</strong><br>
+			Ana Cavalcanti, James Baxter, Pedro De Oliveira Salazar Ribeiro, Alvaro Miyazawa 
                       </p>
                     </td>
                    </tr>
