--- a/school.html
+++ b/school.html
@@ -56,9 +56,9 @@ Computing</h2>
 		(<i>4 hours</i> - Wed 1 Sep 13:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
-			<li>James Baxter</h3></li>
-			<li>Pedro De Oliveira Salazar Ribeiro</h3></li>
-			<li>Alvaro Miyazawa</h3></li>
+			<li><h3>James Baxter</h3></li>
+			<li><h3>Pedro De Oliveira Salazar Ribeiro</h3></li>
+			<li><h3>Alvaro Miyazawa</h3></li>
 		</ul>
 		<hr>
 	</li>
@@ -126,7 +126,8 @@ Computing</h2>
                   </tr>
                    <tr>
                     <td>
-                      <p class="text"><strong>13:00-17:00 - Software Engineering for Robotics: RoboStar technology</strong><br>
+                      <p class="text"><strong>13:00-17:00 -
+			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><br>
 			Ana Cavalcanti, James Baxter, Pedro De Oliveira Salazar Ribeiro, Alvaro Miyazawa 
                       </p>
                     </td>
