--- a/school.html
+++ b/school.html
@@ -85,6 +85,7 @@ Computing</h2>
 	</li>
 	<li><h3><a style="color:#B40431;">A Tutorial to Maude</a>
 		(<i>5 hours</i> - Thu 2 Sep 15:00-16:00, Fri 3 Sep 14:00-16:00, Tue 7 Sep 15:00-17:00 GMT+6)</h3>
+		<ul>
 			<li><h3>Peter Csaba Olvesky</h3></li>
 		</ul>
 		<hr>
@@ -119,6 +120,21 @@ Computing</h2>
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 1 September 2021</h2>
+                  <dl>
+                    <dt>
+                       <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
+                    </dt>
+	            <dt>
+                       <dl class="text"><strong>13:00-17:00 -
+			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><dt>
+			Ana Cavalcanti,
+			James Baxter,
+			Pedro De Oliveira Salazar Ribeiro,
+			Alvaro Miyazawa
+			(University of York, UK)
+                      </p>
+                    </dt>
+                  </dl>
                   <tr>
                     <td>
                        <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
@@ -128,7 +144,11 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>13:00-17:00 -
 			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><br>
-			Ana Cavalcanti, James Baxter, Pedro De Oliveira Salazar Ribeiro, Alvaro Miyazawa 
+			Ana Cavalcanti,
+			James Baxter,
+			Pedro De Oliveira Salazar Ribeiro,
+			Alvaro Miyazawa
+			(University of York, UK)
                       </p>
                     </td>
                    </tr>
