--- a/school.html
+++ b/school.html
@@ -35,16 +35,14 @@
 <h2>Summer School of the 18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
-<!--
 <tr height="10pt">
   <td align="center">
     <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
             style="color:#B40431;" href="#SCHEDULE">Schedule</a> | <a
-            style="color:#B40431;" href="#ABSTRACTS">Abstracts</a>
+            style="color:#B40431;>Abstracts TBA</a>
      <hr>
    </td>
 </tr>
--->
 </center>	
 <a name="COURSES"></a>
 <center>
@@ -116,24 +114,12 @@ Computing</h2>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
  <a style="color:#B40431;" href="/.">GMT+2 (CEST)</a>
+<br>
+<a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 1 September 2021</h2>
-                  <dl>
-                    <dt>
-                       <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
-                    </dt>
-	            <dt>
-                       <dl class="text"><strong>13:00-17:00 -
-			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><dt>
-			Ana Cavalcanti,
-			James Baxter,
-			Pedro De Oliveira Salazar Ribeiro,
-			Alvaro Miyazawa
-			(University of York, UK)
-                      </p>
-                    </dt>
                   </dl>
                   <tr>
                     <td>
