--- a/school.html
+++ b/school.html
@@ -39,7 +39,7 @@ Computing</h2>
   <td align="center">
     <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
             style="color:#B40431;" href="#SCHEDULE">Schedule</a> | <a
-            style="color:#B40431;>Abstracts TBA</a>
+            style="color:#B40431;">Abstracts TBA</a>
      <hr>
    </td>
 </tr>
@@ -126,7 +126,7 @@ Computing</h2>
                        <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
                     </td>
                   </tr>
-                   <tr>
+                  <tr>
                     <td>
                       <p class="text"><strong>13:00-17:00 -
 			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><br>
@@ -143,6 +143,15 @@ Computing</h2>
                        <p class="text"><strong>17:00-18:00 - BREAK</strong></p>
                     </td>
                   </tr>               
+                  <tr>
+                    <td>
+                      <p class="text">Modelling interactions: digital and physical<strong>18:00-20:00 -
+			<a style="color:#B40431;"></a></strong><br>
+			Alan Dix
+			(Swansea University, UK)
+                      </p>
+                    </td>
+                   </tr>
 <br>
 <br>
 <br>
