--- a/school.html
+++ b/school.html
@@ -70,7 +70,7 @@ Computing</h2>
 	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
 		(<i>3 hours</i> - Thu 2, Fri 3, Mon 6 Sep 16:00-17:00 GMT+6)</h3>
 		<ul>
-			<li><h3>Juliana Küster Filipe Bowles,</h3></li>
+			<li><h3>Juliana Küster Filipe Bowles</h3></li>
 		</ul>
 		<hr>
 	</li>
@@ -119,8 +119,7 @@ Computing</h2>
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021</h2>
-                  </dl>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+6: Nur-Sultan, Almaty)</h2>
                   <tr>
                     <td>
                        <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
@@ -154,137 +153,41 @@ Computing</h2>
                    </tr>
 <br>
 <br>
-<br>
-<br>
-<hr size="1">
-<a name="WED"></a>
-<h2 style="color:#B40431;">Friday, 10 September 2021</h2>
+
+<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+                  <tr>
                     <td>
-                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 4: TBA</strong> (Chair: TBA)
-                         <br>
-                         <strong>TBA</strong>
-                         <br>
-                         <a class="link"
-                            href="keynote.html">Abstract and Speaker's Biography</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="slides.pdf">Slides (PDF)</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="video.mp4">Video</a>
+                      <p class="text"><strong>15:00-16:00 -
+			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			Peter Csaba Olveczky
+			(University of Oslo, Norway)
+                      </p>
+                    </td>
+                   </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>16:00-17:00 -
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			Juliana Küster Filipe Bowles
+			(University of Andrews, UK)
                       </p>
                     </td>
                    </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
+                       <p class="text"><strong>17:00-18:00 - BREAK</strong></p>
                     </td>
                   </tr>               
-                 <tr>
-                    <td>
-                      <p class="text"><strong>15:00-17:00 - SESSION 5</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>15:00-15:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>15:30-16:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:00-16:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:30-17:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
                   <tr>
                     <td>
-                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
+                      <p class="text"><strong>18:00-20:00 -
+			<a style="color:#B40431;">Process Mining</a></strong><br>
+			Wil van der Aalst
+			(RWTH Aachen University, Germany)
+                      </p>
                     </td>
-                  </tr>
-                 <tr>
-                    <td>
-                      <p class="text"><strong>18:00-19:30 - SESSION 6</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>18:00-18:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>18:30-19:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>19:00-19:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                       <p class="text"><strong>19:30-19:45 - CLOSING</strong></p>
-                    </td>
-                  </tr>
-<br>
-<br>
+                   </tr>
 
-	   
 
 	   
 
