--- a/school.html
+++ b/school.html
@@ -74,13 +74,6 @@ Computing</h2>
 		</ul>
 		<hr>
 	</li>
-	<li><h3><a style="color:#B40431;">Process Mining</a>
-		(<i>3 hours</i> - Thu 2 Sep 18:00-20:00, Fri 3Sep 19:00-20:00 GMT+6)</h3>
-		<ul>
-			<li><h3>Wil van der Aalst</h3></li>
-		</ul>
-		<hr>
-	</li>
 	<li><h3><a style="color:#B40431;">A Tutorial to Maude</a>
 		(<i>5 hours</i> - Thu 2 Sep 15:00-16:00, Fri 3 Sep 14:00-16:00, Tue 7 Sep 15:00-17:00 GMT+6)</h3>
 		<ul>
@@ -88,11 +81,17 @@ Computing</h2>
 		</ul>
 		<hr>
 	</li>
+	<li><h3><a style="color:#B40431;">Process Mining</a>
+		(<i>3 hours</i> - Thu 2 Sep 18:00-20:00, Fri 3Sep 19:00-20:00 GMT+6)</h3>
+		<ul>
+			<li><h3>Wil van der Aalst</h3></li>
+		</ul>
+		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
 		(<i>2 hours</i> - Mon 6 Sep 14:00-16:00 GMT+6)</h3>
 		<ul>
-			<li><h3>Paddy Krishnan</h3></li>
+			<li><h3>Padmanabhan Krishnan</h3></li>
 			<li><h3>Ben Tyler</h3></li>
 		</ul>
 		<hr>
@@ -159,7 +158,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
 			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
-			Peter Csaba Olveczky
+			Peter Csaba &Ouml;lveczky
 			(University of Oslo, Norway)
                       </p>
                     </td>
@@ -188,7 +187,94 @@ Computing</h2>
                     </td>
                    </tr>
 
+<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>14:00-16:00 -
+			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			Peter Csaba &Ouml;lveczky
+			(University of Oslo, Norway)
+                      </p>
+                    </td>
+                   </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>16:00-17:00 -
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			Juliana Küster Filipe Bowles
+			(University of Andrews, UK)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>17:00-19:00 - BREAK</strong></p>
+                    </td>
+                  </tr>               
+                  <tr>
+                    <td>
+                      <p class="text"><strong>19:00-20:00 -
+			<a style="color:#B40431;">Process Mining</a></strong><br>
+			Wil van der Aalst
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
 
+<h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>14:00-15:00 -
+			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			Padmanabhan Krishnan
+			(Oracle Labs, Australia)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                      <p class="text"><strong>15:00-16:00 -
+			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			Ben Tyler
+			(Nazarbayev University, Kazakhstan)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                      <p class="text"><strong>16:00-17:00 -
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			Juliana Küster Filipe Bowles
+			(University of Andrews, UK)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+
+<h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>15:00-17:00 -
+			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			Peter Csaba &Ouml;lveczky
+			(University of Oslo, Norway)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>17:00-18:00 - BREAK</strong></p>
+                    </td>
+                  </tr>               
+                  <tr>
+                    <td>
+                      <p class="text"><strong>18:00-20:00 -
+			<a style="color:#B40431;">Analyzing interactions: informally and formally</a></strong><br>
+			Antonio Cerone
+			(Nazarbayev University, Kazakhstan)
+                      </p>
+                    </td>
+                   </tr>
 	   
 
                   <div class="container">
