--- a/school.html
+++ b/school.html
@@ -143,8 +143,8 @@ Computing</h2>
                   </tr>               
                   <tr>
                     <td>
-                      <p class="text">Modelling interactions: digital and physical<strong>18:00-20:00 -
-			<a style="color:#B40431;"></a></strong><br>
+                      <p class="text"><strong>18:00-20:00 -
+			<a style="color:#B40431;">Modelling interactions: digital and physical</a></strong><br>
 			Alan Dix
 			(Swansea University, UK)
                       </p>
