--- a/school.html
+++ b/school.html
@@ -128,10 +128,10 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>13:00-17:00 -
 			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><br>
-			Ana Cavalcanti,
-			James Baxter,
-			Pedro De Oliveira Salazar Ribeiro,
-			Alvaro Miyazawa
+			<strong>Ana Cavalcanti</strong>,
+			<strong>James Baxter</strong>,
+			<strong>Pedro De Oliveira Salazar Ribeiro</strong>,
+			<strong>Alvaro Miyazawa</strong>
 			(University of York, UK)
                       </p>
                     </td>
@@ -145,7 +145,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>18:00-20:00 -
 			<a style="color:#B40431;">Modelling interactions: digital and physical</a></strong><br>
-			Alan Dix
+			<strong>Alan Dix</strong>
 			(Swansea University, UK)
                       </p>
                     </td>
@@ -158,7 +158,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
 			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
-			Peter Csaba &Ouml;lveczky
+			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
                     </td>
@@ -167,7 +167,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>16:00-17:00 -
 			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
-			Juliana Küster Filipe Bowles
+			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of Andrews, UK)
                       </p>
                     </td>
@@ -181,18 +181,20 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>18:00-20:00 -
 			<a style="color:#B40431;">Process Mining</a></strong><br>
-			Wil van der Aalst
+			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
                     </td>
                    </tr>
+<br>
+<br>
 
 <h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-16:00 -
 			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
-			Peter Csaba &Ouml;lveczky
+			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
                     </td>
@@ -201,7 +203,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>16:00-17:00 -
 			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
-			Juliana Küster Filipe Bowles
+			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of Andrews, UK)
                       </p>
                     </td>
@@ -215,18 +217,20 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>19:00-20:00 -
 			<a style="color:#B40431;">Process Mining</a></strong><br>
-			Wil van der Aalst
+			<strong>Wil van der Aalst</strong>
 			(RWTH Aachen University, Germany)
                       </p>
                     </td>
                    </tr>
+<br>
+<br>
 
 <h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-15:00 -
 			<a style="color:#B40431;">Research and Industry</a></strong><br>
-			Padmanabhan Krishnan
+			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
                     </td>
@@ -235,7 +239,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
 			<a style="color:#B40431;">Research and Industry</a></strong><br>
-			Ben Tyler
+			<strong>Ben Tyler</strong>
 			(Nazarbayev University, Kazakhstan)
                       </p>
                     </td>
@@ -244,19 +248,21 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>16:00-17:00 -
 			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
-			Juliana Küster Filipe Bowles
+			<strong>Juliana Küster Filipe Bowles</strong>
 			(University of Andrews, UK)
                       </p>
                     </td>
                    </tr>
                    <tr>
+<br>
+<br>
 
 <h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-17:00 -
 			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
-			Peter Csaba &Ouml;lveczky
+			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
                     </td>
@@ -270,7 +276,7 @@ Computing</h2>
                     <td>
                       <p class="text"><strong>18:00-20:00 -
 			<a style="color:#B40431;">Analyzing interactions: informally and formally</a></strong><br>
-			Antonio Cerone
+			<strong>Antonio Cerone</strong>
 			(Nazarbayev University, Kazakhstan)
                       </p>
                     </td>
