--- a/school.html
+++ b/school.html
@@ -17,14 +17,14 @@
   <td align="center">
     <hr> <a style="color:#B40431;" href="https://ictac.isp.uni-luebeck.de/about" target="_tab">ICTAC Conference</a> | <a
             style="color:#B40431;" href="/.">ICTAC 2021</a> | <a
-            style="color:#B40431;" href="#NEWS">News</a> | <a
-            style="color:#B40431;" href="#DATES">Important Dates</a> | <a
-            style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
-            style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-	    style="color:#B40431;" href="REGISTRATION">Registration</a> | <a
-            style="color:#B40431;" href="programme-GMT+6.html">Programme</a> | <a
+            style="color:#B40431;" href="/.#NEWS">News</a> | <a
+            style="color:#B40431;" href="/.#DATES">Important Dates</a> | <a
+            style="color:#B40431;" href="/.#OVERVIEW">Overview and Scope</a> | <a
+            style="color:#B40431;" href="/.#CFP">Call for Papers</a> | <a
+	    style="color:#B40431;" href="/.REGISTRATION">Registration</a> | <a
+            style="color:#B40431;" href="programme.html">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
-            style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
+            style="color:#B40431;" href="/.#COMMITTEES">Committees</a> | <a
 	    style="color:#CCAAAA;">ICTAC School 2021</a>
      <hr>
    </td>
@@ -77,7 +77,7 @@ Computing</h2>
 	<li><h3><a style="color:#B40431;">A Tutorial to Maude</a>
 		(<i>5 hours</i> - Thu 2 Sep 15:00-16:00, Fri 3 Sep 14:00-16:00, Tue 7 Sep 15:00-17:00 GMT+6)</h3>
 		<ul>
-			<li><h3>Peter Csaba Olvesky</h3></li>
+			<li><h3>Peter Csaba &Ouml;lveczky</h3></li>
 		</ul>
 		<hr>
 	</li>
