--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             style="color:#CCAAAA;">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
+	    style="color:#B40431;" href="school.html">ICTAC School 2021</a>
+<!--
 	    style="color:#CCAAAA;">ICTAC School 2021</a>
+-->
      <hr>
    </td>
 </tr>
