--- a/school.html
+++ b/school.html
@@ -168,7 +168,7 @@ Computing</h2>
                       <p class="text"><strong>16:00-17:00 -
 			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of Andrews, UK)
+			(University of St. Andrews, UK)
                       </p>
                     </td>
                    </tr>
@@ -204,7 +204,7 @@ Computing</h2>
                       <p class="text"><strong>16:00-17:00 -
 			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of Andrews, UK)
+			(University of St. Andrews, UK)
                       </p>
                     </td>
                    </tr>
@@ -249,7 +249,7 @@ Computing</h2>
                       <p class="text"><strong>16:00-17:00 -
 			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
 			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of Andrews, UK)
+			(University of St. Andrews, UK)
                       </p>
                     </td>
                    </tr>
