--- a/school.html
+++ b/school.html
@@ -34,7 +34,7 @@
 <h1>ICTAC SCHOOL 2021</h1>
 <h2>Summer School of the 18th International Colloquium on Theoretical Aspects of
 Computing</h2>
-<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
+<h2>VIRTUAL EVENT organised by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
 <tr height="10pt">
   <td align="center">
     <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
