--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1>ICTAC 2021</h1>
 <h2>18th International Colloquium on Theoretical Aspects of
 Computing</h2>
-<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
+<h2>VIRTUAL EVENT organised by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
 </center>
 
 <hr>
