--- a/programme.html
+++ b/programme.html
@@ -36,11 +36,11 @@
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
 <h1 style="color:#B40431;">PROGRAMME</h1>
+</center>
 <p class="text">The detailed programme is not available yet.
-</p>
-<p class="text">The scientific programme consists of
-  <strong><a style="color:#B40431;" href="keynotes.html">four keynote talks</a></strong>
-  and the following <strong><a style="color:#B40431;"accepted papers</a></strong>:
+The scientific programme consists of
+<strong><a style="color:#B40431;" href="keynotes.html">four keynote talks</a></strong>
+and the following <strong><a style="color:#B40431;">accepted papers</a></strong>:
 </p>
 <ul>
 	<li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a><br>
