--- a/programme.html
+++ b/programme.html
@@ -47,8 +47,72 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Yoshifumi Manabe and Hibiki Ono
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">p</a><br>
-    p
+	<li><strong><a style="color:#B40431;">Learning Probabilistic Automata using Residuals</a><br>
+    Wenjing Chu, Shuo Chen and Marcello Bonsangue
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">ComplexityParser: an automatic tool for certifying poly-time complexity of Java programs</a><br>
+    Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
+    Jürgen König and Heike Wehrheim
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
+    Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+    Yati Phyo, Canh Do Minh and Kazuhiro Ogata
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
+    Rick Erkens and Jan Friso Groote
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
+    Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a><br>
+    Luís Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
+    Alejandro Díaz-Caro and Gilles Dowek
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+    Muhammad Hannan Khan, Osman Hasan and Shahid Khan
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
+    Isabela Dramnesc and Tudor Jebelean
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a><br>
+    Stéphane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a><br>
+    Michele Pasqua and Marino Miculan
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
+    Luis Bustamante and Ana Teresa Martins
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
+    Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a><br>
+    Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
+    Ross Horne, Sjouke Mauw and Semen Yurkov
     </strong>
 	</li>
 </ul>
