--- a/programme.html
+++ b/programme.html
@@ -59,6 +59,10 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Jürgen König and Heike Wehrheim
     </strong>
 	</li>
+	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a><br>
+    Liyi Li and Elsa Gunter
+    </strong>
+	</li>
 	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
     Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
     </strong>
@@ -113,6 +117,11 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	</li>
 	<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
     Ross Horne, Sjouke Mauw and Semen Yurkov
+    </strong>
+	</li>
+	</li>
+	<li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market</a><br>
+    Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi
     </strong>
 	</li>
 </ul>
