--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-	    style="color:#CCAAAA;">Registration</a> | <a
-            style="color:#CCAAAA;">Programme</a> | <a
+            style="color:#B40431;" href="registration.html">Registration</a> | <a
+            style="color:#B40431;" href="programme.html">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
 	    style="color:#B40431;" href="school.html">ICTAC School 2021</a>
