--- a/school.html
+++ b/school.html
@@ -21,7 +21,7 @@
             style="color:#B40431;" href="/.#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="/.#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="/.#CFP">Call for Papers</a> | <a
-	    style="color:#B40431;" href="/.REGISTRATION">Registration</a> | <a
+            style="color:#B40431;" href="registration.html">Registration</a> | <a
             style="color:#B40431;" href="programme.html">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="/.#COMMITTEES">Committees</a> | <a
