--- a/registration.html
+++ b/registration.html
@@ -44,7 +44,7 @@ and to the
 is free of charge.</strong>
 </p>
 <p class="text"><strong>In order to register you need to fill in a
-<a style="color:#B40431;" href="./">Google form</a></strong>.
+<a style="color:#B40431;" href="https://forms.gle/rKLeT9S5QFkQ7Nht9">Google form</a></strong>.
 </p>
 <p class="text"><strong>Registration Deadlines:</strong>.
 <ul>
