--- a/school.html
+++ b/school.html
@@ -111,8 +111,8 @@ Computing</h2>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="SCHEDULE+1">GMT+1 (London)</a> |
- <a style="color:#B40431;" href="SCHEDULE+2">GMT+2 (CEST)</a>
+ <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1 (London)</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2 (CEST)</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
@@ -290,14 +290,14 @@ Computing</h2>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="SCHEDULE+2">GMT+2 (CEST)</a> |
- <a style="color:#B40431;" href="SCHEDULE+6">GMT+6 (Nur-Sultan, Almaty)</a>
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2 (CEST)</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6 (Nur-Sultan, Almaty)</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+1: London)</h2>
                   <tr>
                     <td>
                        <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
@@ -332,7 +332,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+1: London)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
@@ -368,7 +368,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+1: London)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-16:00 -
@@ -404,7 +404,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+1: London)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-15:00 -
@@ -436,7 +436,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+1: London)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-17:00 -
@@ -469,14 +469,14 @@ Computing</h2>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
- <a style="color:#B40431;" href="/.">GMT+6 (Nur-Sultan, Almaty)</a>
+ <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1 (London)</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6 (Nur-Sultan, Almaty)</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+6: London)</h2>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+2: CEST)</h2>
                   <tr>
                     <td>
                        <p class="text"><strong>7:30-8:00 - OPENING</strong></p>
@@ -511,7 +511,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+1: London)</h2>
+<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+2: CEST)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
@@ -547,7 +547,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+62: CET)</h2>
+<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+22: CEST)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-12:00 -
