--- a/school.html
+++ b/school.html
@@ -111,14 +111,15 @@ Computing</h2>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1 (London)</a> |
- <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2 (CEST)</a>
+ <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1: London</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2: CEST (Berlin, Paris, Rome)</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+10: AET (Brisbane, Sydeny), Vladivostok</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 - GMT+6: Nur-Sultan, Almaty</h2>
                   <tr>
                     <td>
                        <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
@@ -153,7 +154,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Thursday, 2 September 2021 - GMT+6: Nur-Sultan, Almaty</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
@@ -189,7 +190,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Friday, 3 September 2021 - GMT+6: Nur-Sultan, Almaty</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-16:00 -
@@ -225,7 +226,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Monday, 6 September 2021 - GMT+6: Nur-Sultan, Almaty</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-15:00 -
@@ -257,7 +258,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+6: Nur-Sultan, Almaty)</h2>
+<h2 style="color:#B40431;">Tuesday, 7 September 2021 - GMT+6: Nur-Sultan, Almaty</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>15:00-17:00 -
@@ -290,14 +291,15 @@ Computing</h2>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2 (CEST)</a> |
- <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6 (Nur-Sultan, Almaty)</a>
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+2: CEST</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6: Nur-Sultan, Almaty</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+10: AET (Brisbane, Sydeny), Vladivostok</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+1: London)</h2>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 - GMT+1: London</h2>
                   <tr>
                     <td>
                        <p class="text"><strong>7:30-8:00 - OPENING</strong></p>
@@ -332,7 +334,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+1: London)</h2>
+<h2 style="color:#B40431;">Thursday, 2 September 2021 - GMT+1: London</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
@@ -368,7 +370,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+1: London)</h2>
+<h2 style="color:#B40431;">Friday, 3 September 2021 - GMT+1: London</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>9:00-11:00 -
@@ -404,7 +406,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+1: London)</h2>
+<h2 style="color:#B40431;">Monday, 6 September 2021 - GMT+1: London</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>9:00-10:00 -
@@ -436,7 +438,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+1: London)</h2>
+<h2 style="color:#B40431;">Tuesday, 7 September 2021 - GMT+1: London</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-12:00 -
@@ -469,14 +471,15 @@ Computing</h2>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1 (London)</a> |
- <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6 (Nur-Sultan, Almaty)</a>
+ <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1: London</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6: Nur-Sultan, Almaty</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+2">GMT+10: AET (Brisbane, Sydeny), Vladivostok</a>
 <br>
 <a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021 (GMT+2: CEST)</h2>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
                   <tr>
                     <td>
                        <p class="text"><strong>8:30-9:00 - OPENING</strong></p>
@@ -511,7 +514,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Thursday, 2 September 2021  (GMT+2: CEST)</h2>
+<h2 style="color:#B40431;">Thursday, 2 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>11:00-12:00 -
@@ -547,7 +550,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Friday, 3 September 2021  (GMT+22: CEST)</h2>
+<h2 style="color:#B40431;">Friday, 3 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-12:00 -
@@ -583,7 +586,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Monday, 6 September 2021  (GMT+2: CEST)</h2>
+<h2 style="color:#B40431;">Monday, 6 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
@@ -615,7 +618,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Tuesday, 7 September 2021  (GMT+2: CEST)</h2>
+<h2 style="color:#B40431;">Tuesday, 7 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>11:00-13:00 -
@@ -639,6 +642,187 @@ Computing</h2>
                       </p>
                     </td>
                    </tr>
+	
+<hr>
+<a name="SCHEDULE+2"></a>
+<center>
+<h1 style="color:#B40431;">SCHEDULE</h1>
+<h3 style="color:#B40431;">GMT+10: AET (Brisbane, Sydeny), Vladivostok</h3>
+<hr>
+</center>
+<h3 style="color:#000000;">Schedule for Other Time Zone:
+ <a style="color:#B40431;" href="#SCHEDULE+1">GMT+1: London</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+1">GMT+2: CEST (Berlin, Paris, Rome)</a> |
+ <a style="color:#B40431;" href="#SCHEDULE+6">GMT+6: Nur-Sultan, Almaty</a>
+<br>
+<a style="color:#B40431;" href="#COURSES">Back to List of Courses</a>    
+</h3>
+<hr size="1">
+<a name="WED"></a>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 - GMT+10: AET (Brisbane, Sydeny), Vladivostok</a></h2>
+                  <tr>
+                    <td>
+                       <p class="text"><strong>8:30-9:00 - OPENING</strong></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>17:00-21:00 -
+			<a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></strong><br>
+			<strong>Ana Cavalcanti</strong>,
+			<strong>James Baxter</strong>,
+			<strong>Pedro De Oliveira Salazar Ribeiro</strong>,
+			<strong>Alvaro Miyazawa</strong>
+			(University of York, UK)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>21:00-22:00 - BREAK</strong></p>
+                    </td>
+                  </tr>               
+                  <tr>
+                    <td>
+                      <p class="text"><strong>22:00-24:00 -
+			<a style="color:#B40431;">Modelling interactions: digital and physical</a></strong><br>
+			<strong>Alan Dix</strong>
+			(Swansea University, UK)
+                      </p>
+                    </td>
+                   </tr>
+<br>
+<br>
+
+<h2 style="color:#B40431;">Thursday, 2 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>19:00-20:00 -
+			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<strong>Peter Csaba &Ouml;lveczky</strong>
+			(University of Oslo, Norway)
+                      </p>
+                    </td>
+                   </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>20:00-21:00 -
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<strong>Juliana Küster Filipe Bowles</strong>
+			(University of St. Andrews, UK)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>21:00-22:00 - BREAK</strong></p>
+                    </td>
+                  </tr>               
+                  <tr>
+                    <td>
+                      <p class="text"><strong>22:00-24:00 -
+			<a style="color:#B40431;">Process Mining</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
+<br>
+<br>
+
+<h2 style="color:#B40431;">Friday, 3 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>18:00-20:00 -
+			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<strong>Peter Csaba &Ouml;lveczky</strong>
+			(University of Oslo, Norway)
+                      </p>
+                    </td>
+                   </tr>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>20:00-21:00 -
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<strong>Juliana Küster Filipe Bowles</strong>
+			(University of St. Andrews, UK)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>21:00-23:00 - BREAK</strong></p>
+                    </td>
+                  </tr>               
+                  <tr>
+                    <td>
+                      <p class="text"><strong>23:00-24:00 -
+			<a style="color:#B40431;">Process Mining</a></strong><br>
+			<strong>Wil van der Aalst</strong>
+			(RWTH Aachen University, Germany)
+                      </p>
+                    </td>
+                   </tr>
+<br>
+<br>
+
+<h2 style="color:#B40431;">Monday, 6 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>18:00-19:00 -
+			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<strong>Padmanabhan Krishnan</strong>
+			(Oracle Labs, Australia)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                      <p class="text"><strong>19:00-20:00 -
+			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<strong>Ben Tyler</strong>
+			(Nazarbayev University, Kazakhstan)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                      <p class="text"><strong>20:00-21:00 -
+			<a style="color:#B40431;">Applying Formal Methods in Healthcare</a></strong><br>
+			<strong>Juliana Küster Filipe Bowles</strong>
+			(University of St. Andrews, UK)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+<br>
+<br>
+
+<h2 style="color:#B40431;">Tuesday, 7 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+                  <tr>
+                    <td>
+                      <p class="text"><strong>19:00-21:00 -
+			<a style="color:#B40431;">A Tutorial to Maude</a></strong><br>
+			<strong>Peter Csaba &Ouml;lveczky</strong>
+			(University of Oslo, Norway)
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>21:00-22:00 - BREAK</strong></p>
+                    </td>
+                  </tr>               
+                  <tr>
+                    <td>
+                      <p class="text"><strong>22:00-24:00 -
+			<a style="color:#B40431;">Analyzing interactions: informally and formally</a></strong><br>
+			<strong>Antonio Cerone</strong>
+			(Nazarbayev University, Kazakhstan)
+                      </p>
+                    </td>
+                   </tr>
+	
                   <div class="container">
 
         <div class="row">
