--- a/school.html
+++ b/school.html
@@ -647,7 +647,7 @@ Computing</h2>
 <a name="SCHEDULE+10"></a>
 <center>
 <h1 style="color:#B40431;">SCHEDULE</h1>
-<h3 style="color:#B40431;">GMT+10: AET (Brisbane, Sydeny), Vladivostok</h3>
+<h3 style="color:#B40431;">GMT+10: AET (Brisbane, Sydney), Vladivostok</h3>
 <hr>
 </center>
 <h3 style="color:#000000;">Schedule for Other Time Zone:
@@ -659,7 +659,7 @@ Computing</h2>
 </h3>
 <hr size="1">
 <a name="WED"></a>
-<h2 style="color:#B40431;">Wednesday, 1 September 2021 - GMT+10: AET (Brisbane, Sydeny), Vladivostok</a></h2>
+<h2 style="color:#B40431;">Wednesday, 1 September 2021 - GMT+10: AET (Brisbane, Sydney), Vladivostok</a></h2>
                   <tr>
                     <td>
                        <p class="text"><strong>8:30-9:00 - OPENING</strong></p>
@@ -694,7 +694,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Thursday, 2 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+<h2 style="color:#B40431;">Thursday, 2 September 2021 - GMT+10: AET (Brisbane, Sydney), Vladivostok</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>19:00-20:00 -
@@ -730,7 +730,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Friday, 3 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+<h2 style="color:#B40431;">Friday, 3 September 2021 - GMT+10: AET (Brisbane, Sydney), Vladivostok</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>18:00-20:00 -
@@ -766,7 +766,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Monday, 6 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+<h2 style="color:#B40431;">Monday, 6 September 2021 - GMT+10: AET (Brisbane, Sydney), Vladivostok</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>18:00-19:00 -
@@ -798,7 +798,7 @@ Computing</h2>
 <br>
 <br>
 
-<h2 style="color:#B40431;">Tuesday, 7 September 2021 - GMT+2: CEST (Berlin, Paris, Rome)</h2>
+<h2 style="color:#B40431;">Tuesday, 7 September 2021 - GMT+10: AET (Brisbane, Sydney), Vladivostok</h2>
                   <tr>
                     <td>
                       <p class="text"><strong>19:00-21:00 -
